# cargo-graphmod

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  modules.dot  self-graphmod.sh
.github/workflows/: ci.yml
src/: app_builder.rs  colors.rs  components.rs  dependencies.rs  dependencies_graph.rs  dependencies_parser.rs  dependency_components.rs  dot_formatter.rs  files_reader.rs  graph.rs  lib.rs  main.rs  modules_trie.rs  nonempty_vec.rs  output_for_dot.rs  read_files.rs  trie.rs
src/dependencies_processor/: mod.rs
src/dependencies_processor/rust_processor/: dependency_expander.rs  mod.rs  target_computer.rs
src/formatter/: colors.rs  dot_formatter.rs  mod.rs
src/parser/: mod.rs  rust_parser.rs
tests/: graphmod.rs  web_app.rs
tests/example/: modules.dot
tests/example/src/: app_builder.rs  lib.rs  main.rs
tests/example/src/configuration/: mod.rs
tests/example/src/interfaces/: mod.rs
tests/example/src/storage/: sqlite_db.rs
tests/example/src/use_cases/: storage_trait.rs
tests/web_app/: modules.dot
tests/web_app/src/: main.rs
tests/web_app/src/domain/: mod.rs
tests/web_app/src/interfaces/: cli.rs  web.rs
tests/web_app/src/storage/: mod.rs  postgres_db.rs
tests/web_app/src/use_cases/: mod.rs
