[package]
name = "cargo-graphmod"
version = "1.0.0"
edition = "2021"
description = "A cli utility to graph the dependencies between the modules of a package in the dot/graphviz format."
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1"
