[package]
name = "cargo-graphmod"
version = "1.0.0"
authors = ["Thomas Hügel"]
edition = "2021"
description = "A cli utility to graph the dependencies between the modules of a package in the dot/graphviz format."
license = "GPL-3.0-only"
repository = "https://github.com/thomas-huegel/cargo-graphmod"
keywords = ["architecture", "modules", "graph", "dependencies"]
exclude = [".github/", "tests/web_app*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1"
